<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_local_pantry"
            android:icon="@drawable/ic_local_pantry"
            android:title="@string/menu_local_pantry" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_registration"
            android:title="@string/menu_register" />
    </group>
</menu>