<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.progetto.trackingmypantry.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.progetto.trackingmypantry.ui.registration.RegistrationFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.progetto.trackingmypantry.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_local_pantry"
        android:name="com.progetto.trackingmypantry.ui.localpantry.LocalPantryFragment"
        android:label="@string/menu_local_pantry"
        tools:layout="@layout/local_pantry_fragment" />
</navigation>