<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:background="@drawable/dialog_shape">

    <TextView
        android:id="@+id/barcodeTitle"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:text="@string/insert_barcode"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp">

        <EditText
            android:id="@+id/barcodeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/barcode_hint"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/camera_btn"
            android:minHeight="48dp"
            android:src="@drawable/ic_menu_camera"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/searchProducts"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_btn"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
</ScrollView>