<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@drawable/dialog_shape"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:text="@string/search_local_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:hint="@string/prod_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/searchLocalProducts"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_btn"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
</ScrollView>