<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/dialog_shape"
        >

        <TextView
            android:id="@+id/localBarcodeTitle"
            android:layout_width="274dp"
            android:layout_height="49dp"
            android:text="@string/add_prod"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialogExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="@string/exp_date"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/localDialogType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/addDialogLocalProducts"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_btn"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</ScrollView>